<resources>
    <string name="app_name">dresscode</string>
    <string name="registration">registration</string>
    <string name="sign_in_button">sign in</string>
    <string name="name_field">name</string>
    <string name="Email_field">e-mail</string>
    <string name="enter_pass">password</string>
    <string name="repeat_pass">repeat password</string>
    <string name="forgot_account">Forgot account?</string>
    <string name="next">next</string>
    <string name="default_collage_name">no name</string>
    <string name="error_message">you enter invalid data</string>
    <string name="login">login</string>
    <string name="Email_for_forgot_account">please enter your account email address</string>
    <string name="create_account">create account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
