<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.forgot_account_activity.ForgotAccountActivity">

    <TextView
        android:id="@+id/e_mail_to_restore_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email_for_forgot_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <EditText
        android:id="@+id/e_mail_field"
        android:layout_width="239dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:hint="@string/Email_field"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_mail_to_restore_acc"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/next"
        android:transitionName=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/e_mail_field"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_account_error_message"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/forgot_account_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_mail_field" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="155dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="animate"
        app:srcCompat="@drawable/anim_news" />
</androidx.constraintlayout.widget.ConstraintLayout>